fix hero image aspect ratio on mobile

--- a/assets/stylesheets/modules/_hero.scss
+++ b/assets/stylesheets/modules/_hero.scss
@@ -24,9 +24,6 @@
   }
 }
 
-.hero-image {
-}
-
 .stores {
   width: 15rem;
 }
